fixed bug with spacing issue

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -200,7 +200,6 @@ a {
 
 article {
     margin: auto;
-    margin-bottom: 15rem;
 }
 
 article p {
